; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_parse_combinator.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_parse_combinator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexbuf = type { i32, i32 }
%struct.TYPE_6__ = type { i32, %struct.TYPE_6__*, %struct.TYPE_6__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (%struct.lexbuf*, i32, %struct.TYPE_6__*)* @parse_combinator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @parse_combinator(%struct.lexbuf* %0, i32 %1, %struct.TYPE_6__* %2) #0 {
  %4 = alloca %struct.lexbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  store %struct.lexbuf* %0, %struct.lexbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %6, align 8
  %9 = load %struct.lexbuf*, %struct.lexbuf** %4, align 8
  %10 = call i32 @white(%struct.lexbuf* %9)
  %11 = load %struct.lexbuf*, %struct.lexbuf** %4, align 8
  %12 = call %struct.TYPE_6__* @parse_simple_selector(%struct.lexbuf* %11)
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %8, align 8
  %13 = load %struct.lexbuf*, %struct.lexbuf** %4, align 8
  %14 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.lexbuf*, %struct.lexbuf** %4, align 8
  %17 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.TYPE_6__* @fz_new_css_selector(i32 %15, i32 %18, i32* null)
  store %struct.TYPE_6__* %19, %struct.TYPE_6__** %7, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 2
  store %struct.TYPE_6__* %23, %struct.TYPE_6__** %25, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 1
  store %struct.TYPE_6__* %26, %struct.TYPE_6__** %28, align 8
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  ret %struct.TYPE_6__* %29
}

declare dso_local i32 @white(%struct.lexbuf*) #1

declare dso_local %struct.TYPE_6__* @parse_simple_selector(%struct.lexbuf*) #1

declare dso_local %struct.TYPE_6__* @fz_new_css_selector(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
